--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
             </div>
         </div>
     </header>
-    
-    <main>
-        <iframe name="content-frame" src="./src/pages/home.html" frameborder="0" width="100%" height="800px"></iframe>
+    <main class="main">
+    <iframe name="content-frame" src="./src/pages/home.html" frameborder="0" width="100%" ></iframe>
     </main>
-
 </body>
 </html>
