--- a/src/pages/colecoes.html
+++ b/src/pages/colecoes.html
@@ -1,3 +1,40 @@
-<div>
-    <h1>colecoes</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coleções - Joias Lux</title>
+    <link rel="stylesheet" href="../styles/colecoes.css">
+</head>
+<body>
+    <section>
+        <h1>Nossas Coleções</h1>
+        <div class="container">
+            <div class="box-colection">
+                <img src="../assets/img/JoiaModerna.jpg" alt="JoiaModerna" class="JoiaImg">
+                <h2>Modernas</h2>
+            </div>
+            <div class="box-colection">
+                <img src="../assets/img/JoiaClassica.jpg" alt="JoiaClassica" class="JoiaImg">
+                <h2>Clássicas</h2>
+            </div>
+            <div class="box-colection">
+                <img src="../assets/img/JoiaMasculina.jpg" alt="JoiaMasculina" class="JoiaImg">
+                <h2>Masculinas</h2>
+            </div>
+            <div class="box-colection">
+                <img src="../assets/img/JoiaRomantica.jpg" alt="JoiaRomantica" class="JoiaImg">
+                <h2>Românticas</h2>
+            </div>
+            <div class="box-colection">
+                <img src="../assets/img/JoiaInfantil.jpg" alt="JoiaInfantil" class="JoiaImg">
+                <h2>Infantis</h2>
+            </div>
+            <div class="box-colection">
+                <img src="../assets/img/JoiaEtinica.jfif" alt="JoiaEtinica" class="JoiaImg">
+                <h2>Étnicas</h2>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
