--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -12,7 +12,7 @@
             <h1>Entre em Contato</h1>
             <p>Tem alguma dúvida ou deseja saber mais sobre nossos produtos? Estamos aqui para ajudar!</p>
 
-            <form action="#" method="POST" class="contato-form">
+            <form  class="contato-form">
                 <div class="form-group">
                     <label for="nome">Nome</label>
                     <input type="text" id="nome" name="nome" placeholder="Seu nome completo" required>
