--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="container">
                 <h1>Descubra o Brilho Perfeito</h1>
                 <p>Joias exclusivas para momentos inesquecíveis.</p>
-                <a href="" class="btn">Ver Coleções</a>
+               <a href="#colecoes" class="btn">Ver Coleções</a>
             </div>
         </div>
         <div class="destaques">
