responsividade alterada e inclusao de menu mobile

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
                 <a href="#colecoes">Coleções</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#contato">Contato</a>
+                <a href="#depoimentos" class="testimonial-icon">💬</a>
+                <a href="#blog" class="trends-icon">✨</a>
             </nav>
-            <div class="icons">
-                <a href="" class="cart-icon">🛒</a>
-                <a href="" class="user-icon">👤</a>
+            <div class="menu" onclick="toggleMenu()">
+                &#9776;
             </div>
         </div>
     </header>
@@ -165,9 +166,16 @@
             <div class="depoimento">
                 <div class="depoimento-usuario">
                     <span class="icon-usuario">👤</span> 
-                    <h3>Daniel mais lindo da UFMA</h3>
+                    <h3>Daniel Moedas</h3>
                 </div>
                 <p>"Excelente serviço, atendimento impecavél."</p>
+            </div>
+            <div class="depoimento">
+                <div class="depoimento-usuario">
+                    <span class="icon-usuario">👤</span> 
+                    <h3>Rango Santos Monteiro</h3>
+                </div>
+                <p>"Meu marido Daniel amou as joias, recomendo muito!"</p>
             </div>
         </div>
     </section>
@@ -188,6 +196,6 @@
         </div>
     </section>
     
-    
+    <script src="./src/scripts/cod.js"></script>
 </body>
 </html>
