--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </nav>
             <div class="menu" onclick="toggleMenu()">
                 &#9776;
+                <a href="#home">Joias Lux</a>
             </div>
         </div>
     </header>
