Atualização em aula

--- a/index.html
+++ b/index.html
@@ -55,8 +55,20 @@
                         <h3>Relógio de Luxo</h3>
                         <p>Perfeito para completar seu visual.</p>
                     </div>
+                    <div class="item"  onclick="openModal('Anel de Ouro', './src/assets/img/anel.jpg', 'Brilhe com nosso anel de ouro 18k.', 'R$ 1.500')">
+                        <img src="./src/assets/img/anel.jpg" alt="Anel de Ouro">
+                        <h3>Anel de Ouro</h3>
+                        <p>Brilhe com nosso anel de ouro 18k.</p>
                 </div>
+                <div class="item"  onclick="openModal('Anel de Ouro', './src/assets/img/anel.jpg', 'Brilhe com nosso anel de ouro 18k.', 'R$ 1.500')">
+                    <img src="./src/assets/img/anel.jpg" alt="Anel de Ouro">
+                    <h3>Anel de Ouro</h3>
+                    <p>Brilhe com nosso anel de ouro 18k.</p>
             </div>
+            <div class="item"  onclick="openModal('Anel de Ouro', './src/assets/img/anel.jpg', 'Brilhe com nosso anel de ouro 18k.', 'R$ 1.500')">
+                <img src="./src/assets/img/anel.jpg" alt="Anel de Ouro">
+                <h3>Anel de Ouro</h3>
+                <p>Brilhe com nosso anel de ouro 18k.</p>
         </div>
     </section>
 
