--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <a href="#home">Joias Lux</a>
+                <a href="#home">
+                    <img  src="./src/assets/icons/logo.png" alt="logo">
+                </a>
             </div>
             <nav class="nav">
                 <a href="#home">Home</a>
@@ -21,9 +23,13 @@
                 <a href="#depoimentos" >Feedback</a>
                 <a href="#contato">Contato</a>
             </nav>
-            <div class="menu" onclick="toggleMenu()">
-                &#9776;
-                <a href="#home">Joias Lux</a>
+            <div class="menu-container">
+                <a href="#home">
+                    <img src="./src/assets/icons/logo.png" alt="logo">
+                </a>
+                <div class="menu" onclick="toggleMenu()">
+                    &#9776;
+                </div>
             </div>
         </div>
     </header>
